# python-project-gendiff

./: .coverage  .gitignore  Makefile  README.md  gendiffj.cast  gendiffy.cast  pyproject.toml  ruff.toml
.github/workflows/: Test-Coverage.yml
gendiff/: __init__.py  gen_diff.py  gen_diff_json.py  gen_diff_plain.py  gen_diff_stylish.py  get_format.py  pars_data.py  pars_yaml.py
gendiff/scripts/: gen_diff.py  gendiff.py
tests/: test_generate_diff.py  test_generate_diff_json.py  test_generate_diff_plain.py  test_generate_diff_recurs.py
tests/test_data/: result_file11_file22.txt  result_json.json
